syntax = "proto3";
option go_package = "github.com/vinemesh/go-grpc-chat-server/internal/messages";
package messages;

message PlayerMessage {
    string player_id = 1;
    string content = 2;
}

message ResponseMessage {
    string message = 1;
}

service MessageService {
    rpc SendMessage(PlayerMessage) returns (ResponseMessage);
    rpc StreamMessages(stream PlayerMessage) returns (stream ResponseMessage);
}